--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.68.2",
     "react-native-web": "0.17.7",
     "webpack-dev-server": "~3.11.0",
-    "@expo/webpack-config": "~0.16.2"
+    "@expo/webpack-config": "~0.16.2",
+    "expo-updates": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
